-
Bug
-
Resolution: Done
-
P1: Critical
-
5.4.1, 5.5.0
-
None
-
e9ad46ed412987e3e46c5a641e5f30408b97ac90 c43dcc6aeda15ce1c3406fdcb7d023e6b1c93ab5
QSortFilterProxyModel was broken in bec1854cc023fb705319c582a636d5f484adafcc ; when sorting tree models, the proxied children don't follow the sorted parents, resulting in crashes.
For Gerrit Dashboard: QTBUG-43827 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
103541,3 | QSortFilterProxyModel: fix a regression | dev | qt/qtbase | Status: MERGED | +2 | 0 |
104066,2 | QSortFilterProxyModel: fix a regression | 5.4.1 | qt/qtbase | Status: MERGED | +2 | 0 |